@@ -1,5 +1,7 @@
 2011-12-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* image/gtkimage.py, plugins/base/base.py: Fixed size attribute
+	  problems.
 	* tumblr/__init__.py: Added size attributes.
 
 2011-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
